--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario de Ingreso de Productos</title>
+    <script src="https://cdn.jsdelivr.net/npm/normalizr@3.6.1/dist/normalizr.browser.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js"
         integrity="sha512-RNLkV3d+aLtfcpEyFG8jRbnWHxUqVZozacROI4J2F1sTaDqo1dPQYs01OMi1t1w9Y2FdbSCDSQ2ZVdAC8bzgAg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -48,7 +49,7 @@
         </div>
 
         <div class="jumbotron">
-            <h1>Centro de Mensajes</h1>
+            <h1>Centro de Mensajes (Compresión: <span id="compresion-info"></span>%)</h1>
             <br />
     
             <input type="email" id="authorId" class="form-control w-50 my-2 mr-2" placeholder="Ingresa tu email" />
@@ -73,7 +74,7 @@
           </div>
         </div>
 
-    <script src="js/main.js"></script>
+    <script src="./index.js"></script>
 
 </body>
 
